fix: overflow issue on mobile

--- a/assets/css/gamestyle.css
+++ b/assets/css/gamestyle.css
@@ -59,15 +59,16 @@ body{
 }
 
 .book-button-nav {
-  background-image: linear-gradient(to right, rgb(50, 69, 175) , rgb(35, 32, 207));
+  background-image: linear-gradient(to right, rgb(58, 76, 175) , rgb(35, 32, 207));
   color: #fafafa;
   transition: all 0.3s;
-  border-radius: 10%;
-  margin-right: 10px;
+  border-radius: 5%;
+  margin-right: 20px;
+ padding: .5rem .5rem;
 }
 
 .book-button-nav:hover {
-  background-image: linear-gradient(to right,rgb(0, 0, 0), rgba(255, 255, 255, 0));
+  background:rgb(7, 21, 212);
   color: #fafafa;
   transform: scale(1.2);
 }
@@ -207,9 +208,12 @@ body{
     text-shadow: 2px 2px 5px red;
     cursor: pointer;
 }
+.victory-text{
+    font-size: 1.1em;
+}
 
 .overlay-text-small{
-    font-size: .3em;
+    font-size: 1em;
 }
 
 .overlay-text.vis{
